<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Spinner
        style="@style/Widget.AppCompat.DropDownItem.Spinner"
        android:id="@+id/enc_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:minWidth="40dp"
        android:spinnerMode="dropdown"
        android:visibility="visible"
        android:background="@color/colorAccent" />

    <Button
        android:id="@+id/startenc"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rbutton"
        android:text="@string/decstart" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="375dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/enc_spinner"
        android:layout_marginTop="14dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:hint="@string/enctext"
                android:inputType="textMultiLine|textLongMessage" />

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/keyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="93dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/keytextdc"
            android:inputType="number"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:textSize="15sp" />

    </android.support.design.widget.TextInputLayout>

    <ImageButton
        android:id="@+id/infoButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/enc_spinner"
        android:layout_marginEnd="12dp"
        android:adjustViewBounds="false"
        android:backgroundTint="@android:color/transparent"
        android:elevation="@dimen/fab_margin"
        android:tint="@color/colorAccent"
        app:srcCompat="@drawable/info_icon" />

</RelativeLayout>