<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.avagr.crypt.MainMenuActivity">

    <ListView
        android:id="@+id/dbview"
        android:layout_width="0dp"
        android:layout_height="497dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/leftrec"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dbview"
        app:srcCompat="@drawable/leftthalfrec" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55"/>

    <ImageView
        android:id="@+id/rightrec"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/dbview"
        app:srcCompat="@drawable/righthalfrec" />

    <Button
        android:id="@+id/toenc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:text="@string/encstart"
        android:textAllCaps="false"
        android:textSize="33sp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toBottomOf="@+id/leftrec"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/leftrec"
        app:layout_constraintTop_toTopOf="@+id/leftrec" />

    <Button
        android:textAllCaps="false"
        android:id="@+id/todec"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:text="@string/decstart"
        android:textSize="33sp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toBottomOf="@+id/rightrec"
        app:layout_constraintEnd_toEndOf="@+id/rightrec"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/rightrec" />

    <ImageView
        android:id="@+id/frameimageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rframe"
        app:layout_constraintBottom_toTopOf="@+id/dbview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/saved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/saved"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/frameimageView"
        app:layout_constraintEnd_toEndOf="@+id/frameimageView"
        app:layout_constraintStart_toStartOf="@+id/frameimageView"
        app:layout_constraintTop_toTopOf="@+id/frameimageView" />

</android.support.constraint.ConstraintLayout>